-------------------------- aqp 1.4-6 (2013-01-03) --------------------------
* updated documentation and SoilProfileCollection tutorial here:
  - https://r-forge.r-project.org/scm/viewvc.php/*checkout*/docs/aqp/aqp-intro.html?root=aqp
* plans laid for parallel processing in slab() and profileApply() via 'parallel' package

-------------------------- aqp 1.4-5 (2012-12-29) --------------------------
* slab() re-written from scratch, resulting in reduced memory footprint and quicker running time
  ! older code based on slab() is likely to now broken- sorry, it won't happen again
  - the new code is much slimmer and based on aggregate() rather than ddply
  - function arguments have changed so be sure to check the manual page
  - user-supplied functions are now much simpler to write and rely on vectors rather than data.frames (= faster)
  - the next major release will contain additional examples of how to use the new features

-------------------------- aqp 1.4 (2012-12-18) --------------------------
* new function sim() for simulation based on a template soil profile, proper documentation pending...

-------------------------- aqp 1.3-3 (2012-12-06) --------------------------
* new function subsetProfiles() for simpler subsetting of SoilProfileCollection objects via site or horizon-level attributes
* get.ml.hz() now returns a 'confidence' for each horizon (as a percent)
* added experimental 'filter' argument to profile_compare()-- see manual page for usage
* added new argument to plot.SoilProfileCollection()-- alt.label: used to add secondary labeling via data in @site
* plot.SoilProfileCollection() will now do a better job of selecting the location for profile IDs based on label length, font size, and figure size

-------------------------- aqp 1.3-2 (2012-11-01) --------------------------
* minor tweaks to plot.SoilProfileCollection() for improved output with small/large size collections